--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -196,8 +196,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cEy-OK-PiB">
-                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cEy-OK-PiB">
+                                <rect key="frame" x="-4" y="436" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="7MW-7a-8nh">
                                         <color key="tintColor" red="0.52234006879999995" green="0.80933000649999998" blue="0.45759091140000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -214,15 +214,15 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q8s-Sr-egI">
-                                <rect key="frame" x="0.0" y="20" width="320" height="416"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q8s-Sr-egI">
+                                <rect key="frame" x="-4" y="20" width="328" height="416"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Marcel" id="gp8-pb-9Gg" customClass="CategoryTableViewCell" customModule="projectHtlp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="328" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gp8-pb-9Gg" id="KmU-e2-OPO">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="328" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VVp-2u-zJa">
@@ -434,13 +434,6 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Fh-ch-aUs">
-                                        <rect key="frame" x="8" y="117" width="304" height="90"/>
-                                        <connections>
-                                            <outlet property="dataSource" destination="rgD-fA-1g2" id="Pho-VS-Zvs"/>
-                                            <outlet property="delegate" destination="rgD-fA-1g2" id="Ck5-aQ-dLj"/>
-                                        </connections>
-                                    </pickerView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Début de disponibilité" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="trz-nC-I1U">
                                         <rect key="frame" x="8" y="308" width="170" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -474,8 +467,15 @@
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Temps à consacrer pendant la période" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q5x-0E-FIc">
                                         <rect key="frame" x="8" y="542" width="304" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                     </textField>
+                                    <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Fh-ch-aUs">
+                                        <rect key="frame" x="8" y="117" width="304" height="90"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="rgD-fA-1g2" id="Pho-VS-Zvs"/>
+                                            <outlet property="delegate" destination="rgD-fA-1g2" id="Ck5-aQ-dLj"/>
+                                        </connections>
+                                    </pickerView>
                                 </subviews>
                             </scrollView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="irl-CE-QIa">
@@ -647,22 +647,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rb0-KW-wcS">
-                                <rect key="frame" x="-4" y="20" width="328" height="44"/>
-                                <items>
-                                    <barButtonItem title="Rendu" id="r4P-SE-DUL">
-                                        <color key="tintColor" red="0.52234006879999995" green="0.80933000649999998" blue="0.45759091140000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="B49-tZ-ALa"/>
-                                    <barButtonItem title="Services" id="aKp-6j-99h">
-                                        <color key="tintColor" red="1" green="0.062036883262506781" blue="0.151791896644899" alpha="1" colorSpace="calibratedRGB"/>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="89a-D4-PJV"/>
-                                    <barButtonItem title="Reçu" id="3pb-5V-1Ih">
-                                        <color key="tintColor" red="0.2575681091" green="0.70287884" blue="0.80933000649999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nom" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1y-uY-iP8">
                                 <rect key="frame" x="20" y="87" width="92" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -697,6 +681,25 @@
                                         <connections>
                                             <segue destination="BYZ-38-t0r" kind="show" id="hOD-Do-oE5"/>
                                         </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rb0-KW-wcS">
+                                <rect key="frame" x="-4" y="20" width="328" height="44"/>
+                                <items>
+                                    <barButtonItem title="Rendu" id="r4P-SE-DUL">
+                                        <color key="tintColor" red="0.52234006879999995" green="0.80933000649999998" blue="0.45759091140000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="B49-tZ-ALa"/>
+                                    <barButtonItem title="Services" id="aKp-6j-99h">
+                                        <color key="tintColor" red="1" green="0.062036883262506781" blue="0.151791896644899" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="onClickServices:" destination="a7h-oz-UDy" id="u2l-8C-N68"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="89a-D4-PJV"/>
+                                    <barButtonItem title="Reçu" id="3pb-5V-1Ih">
+                                        <color key="tintColor" red="0.2575681091" green="0.70287884" blue="0.80933000649999998" alpha="1" colorSpace="calibratedRGB"/>
                                     </barButtonItem>
                                 </items>
                             </toolbar>
@@ -819,9 +822,9 @@
         <image name="user" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hOD-Do-oE5"/>
-        <segue reference="oJk-5d-dqT"/>
         <segue reference="HUV-72-kJb"/>
-        <segue reference="tkL-LF-dLt"/>
+        <segue reference="rPo-53-24Y"/>
+        <segue reference="qsO-TL-m9W"/>
+        <segue reference="hOD-Do-oE5"/>
     </inferredMetricsTieBreakers>
 </document>
