--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -184,6 +184,77 @@
             </objects>
             <point key="canvasLocation" x="1912" y="289"/>
         </scene>
+        <!--Search Category View Controller-->
+        <scene sceneID="7bN-zb-ha0">
+            <objects>
+                <viewController storyboardIdentifier="searchCategory" id="xzJ-vw-SXe" customClass="SearchCategoryViewController" customModule="projectHtlp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="K12-gD-Mgb"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z6c-Dd-afA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="e4Q-fL-hQj">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QAa-uK-sUC">
+                                <rect key="frame" x="-4" y="436" width="328" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="reply" id="vpo-7h-P8H">
+                                        <color key="tintColor" red="1" green="0.062036883260000002" blue="0.1517918966" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <segue destination="emX-Ul-OMB" kind="show" id="lIb-Zj-BLP"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lq9-2i-1ML">
+                                <rect key="frame" x="-4" y="0.0" width="328" height="436"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Joel" textLabel="SlD-pu-oS0" detailTextLabel="ZP8-AW-ry5" style="IBUITableViewCellStyleSubtitle" id="WkH-SM-ZNI">
+                                        <rect key="frame" x="0.0" y="28" width="328" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WkH-SM-ZNI" id="J31-4A-NIG">
+                                            <rect key="frame" x="0.0" y="0.0" width="328" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SlD-pu-oS0">
+                                                    <rect key="frame" x="15" y="1" width="37" height="26"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
+                                                    <color key="textColor" red="1" green="0.062036883260000002" blue="0.1517918966" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZP8-AW-ry5">
+                                                    <rect key="frame" x="15" y="27" width="37" height="15"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="11"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lq9-2i-1ML" firstAttribute="top" secondItem="e4Q-fL-hQj" secondAttribute="topMargin" id="9WK-WG-CtZ"/>
+                            <constraint firstItem="lq9-2i-1ML" firstAttribute="leading" secondItem="e4Q-fL-hQj" secondAttribute="leadingMargin" constant="-20" id="FhN-3z-z6F"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lq9-2i-1ML" secondAttribute="trailing" constant="-20" id="Hbp-3m-Y5l"/>
+                            <constraint firstItem="Z6c-Dd-afA" firstAttribute="top" secondItem="QAa-uK-sUC" secondAttribute="bottom" id="Ijd-Hy-964"/>
+                            <constraint firstItem="QAa-uK-sUC" firstAttribute="leading" secondItem="e4Q-fL-hQj" secondAttribute="leadingMargin" constant="-20" id="Lvf-GX-nmV"/>
+                            <constraint firstItem="QAa-uK-sUC" firstAttribute="top" secondItem="lq9-2i-1ML" secondAttribute="bottom" id="VdC-tW-dym"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QAa-uK-sUC" secondAttribute="trailing" constant="-20" id="lhL-EU-d2s"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5QF-qF-tte" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2356" y="289"/>
+        </scene>
         <!--Categories Table View Controller-->
         <scene sceneID="cBL-mz-Qhg">
             <objects>
@@ -1147,9 +1218,9 @@
         <image name="user" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hOD-Do-oE5"/>
+        <segue reference="TC9-cJ-Qm6"/>
+        <segue reference="WDc-4o-WhT"/>
+        <segue reference="lIb-Zj-BLP"/>
         <segue reference="z9u-48-bKC"/>
-        <segue reference="HUV-72-kJb"/>
-        <segue reference="qsO-TL-m9W"/>
     </inferredMetricsTieBreakers>
 </document>
