--- a/projectHtlp/Base.lproj/Main.storyboard
+++ b/projectHtlp/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aiM-WZ-IU6">
+                            <searchBar contentMode="redraw" placeholder="Rechercher" translatesAutoresizingMaskIntoConstraints="NO" id="aiM-WZ-IU6">
                                 <rect key="frame" x="-4" y="20" width="328" height="44"/>
                                 <color key="barTintColor" red="1" green="0.81803584186373757" blue="0.43520865481209736" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -158,6 +158,13 @@
                                 </items>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             </toolbar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tNU-AU-qUc">
+                                <rect key="frame" x="137" y="235" width="46" height="30"/>
+                                <state key="normal" title="Recherche"/>
+                                <connections>
+                                    <segue destination="yPC-an-ajY" kind="show" id="G3I-z5-eLu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -475,6 +482,79 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KzT-te-lEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3094" y="1008"/>
+        </scene>
+        <!--SearchController-->
+        <scene sceneID="1Ab-N8-ffH">
+            <objects>
+                <viewController title="SearchController" id="yPC-an-ajY" customClass="SearchViewController" customModule="projectHtlp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5gm-he-RN6"/>
+                        <viewControllerLayoutGuide type="bottom" id="281-cH-lak"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1UL-mc-ile">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KSR-pb-o1g">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="reply" id="5TH-Uw-Yxd">
+                                        <connections>
+                                            <segue destination="emX-Ul-OMB" kind="show" id="dQy-nA-bzZ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="rPN-OE-eTT"/>
+                                </items>
+                            </toolbar>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Recherche" translatesAutoresizingMaskIntoConstraints="NO" id="9hq-b8-hEX">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="yPC-an-ajY" id="lyj-Gn-HRf"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AFz-k8-rnQ">
+                                <rect key="frame" x="0.0" y="72" width="320" height="364"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchCell" id="ZhV-vE-KCs">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZhV-vE-KCs" id="KBb-xS-FEX">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="AYv-xD-tlx" kind="show" identifier="segueFromSearchtoAnnounce" id="R4E-Dz-1ci"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="yPC-an-ajY" id="xTu-QE-ICk"/>
+                                    <outlet property="delegate" destination="yPC-an-ajY" id="V1G-VM-bb8"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="searchBar" destination="9hq-b8-hEX" id="3he-kR-KSL"/>
+                        <outlet property="searchDisplayController" destination="7WW-hQ-T4b" id="6yB-bf-7Ie"/>
+                        <outlet property="tableView" destination="AFz-k8-rnQ" id="9KI-h9-HgM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X1F-lY-jzW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="7WW-hQ-T4b">
+                    <connections>
+                        <outlet property="delegate" destination="yPC-an-ajY" id="Y9P-oY-C2r"/>
+                        <outlet property="searchContentsController" destination="yPC-an-ajY" id="r89-Zh-wko"/>
+                        <outlet property="searchResultsDataSource" destination="yPC-an-ajY" id="Lq2-5l-wWa"/>
+                        <outlet property="searchResultsDelegate" destination="yPC-an-ajY" id="jZu-rx-7IM"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1874" y="-576"/>
         </scene>
         <!--Nouvelle annonce-->
         <scene sceneID="95Y-9e-QeI">
@@ -927,7 +1007,7 @@
                                     <constraint firstAttribute="height" constant="248" id="GNd-CB-eaN"/>
                                 </constraints>
                             </stackView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xpX-sr-Pq2">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xpX-sr-Pq2">
                                 <rect key="frame" x="-4" y="436" width="328" height="44"/>
                                 <items>
                                     <barButtonItem systemItem="reply" id="Kzt-d9-w6S">
@@ -1218,9 +1298,9 @@
         <image name="user" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="rPo-53-24Y"/>
+        <segue reference="dQy-nA-bzZ"/>
         <segue reference="TC9-cJ-Qm6"/>
         <segue reference="WDc-4o-WhT"/>
-        <segue reference="lIb-Zj-BLP"/>
-        <segue reference="z9u-48-bKC"/>
     </inferredMetricsTieBreakers>
 </document>
